<resources>
    <string name="app_name">Acme Supermarket</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Acceder</string>
    <string name="error_invalid_email">Este correo no es válido</string>
    <string name="error_invalid_password">Esta contraseña no es válida</string>
    <string name="error_incorrect_password">La contraseña no es correcta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"El permiso para acceder a los contactos es necesario para autocompletar el correo electrónico."
    </string>
    <string name="intro_sign_in_google">Acceso con Google</string>
    <string name="login_email_not_valid_short">Correo incorrecto</string>
    <string name="login_pass_not_valid_short">Contraseña incorrecta</string>
    <string name="login_play_services_error">Debes actualizar Google Play Services antes de continuar</string>
    <string name="login_play_services_error_go">Actualizar</string>
    <string name="login_error">Se ha producido un error al acceder</string>
    <string name="login_error_mail">El nombre de usuario o la contraseña no son correctos</string>
    <string name="login_error_mail_retry">Volver a intentar</string>
    <string name="login_error_reset_pass">No recuerdo la contraseña</string>
    <string name="register_reset_mail_sent">Hemos enviado un correo electrónico a %1$s para restablecer tu contraseña</string>
    <string name="register_reset_mail_error">El correo electrónico introducido no es correcto</string>
    <string name="login_error_mail_register">Regístrate</string>
    <string name="login_error_email_verified">Aún no has validado tu cuenta. ¿Quieres que te enviemos de nuevo un correo de verificación?</string>
    <string name="login_error_email_verified_yes">Enviar correo</string>
    <string name="login_error_email_verified_no">Cancelar</string>
    <string name="register_verification_mail_sent">Hemos enviado un correo de verificación a %1$s. Pulsa el enlace que te hemos enviado y accede de nuevo con el correo electrónico y la contraseña que introdujiste antes</string>
    <string name="register_verification_mail_error">Error al enviar el correo de verificación</string>
    <string name="login_button_register">¿Aún no eres usuario de Acme Supermarket? Pulsa aquí para registrarte</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Acme Supermarket</string>
    <string name="nav_header_subtitle">Máster Ingeniería del Software</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="title_activity_categories">Categorías</string>
    <string name="section_title_categories">Explora</string>
    <string name="section_title_warehouses">Tiendas</string>
    <string name="section_title_shopping_cart">Carrito</string>
    <string name="section_title_orders">Pedidos</string>
    <string name="section_title_contact">Contacto</string>
    <string name="dummy_category_name">Móviles</string>
    <string name="dummy_category_description">Esto es un ejemplo de descripción para esta categoría</string>
    <string name="title_activity_categories_add">Nueva categoría</string>
    <string name="prompt_categories_add_name">Nombre</string>
    <string name="prompt_categories_add_description">Descripción</string>
    <string name="prompt_categories_add_picture">URL de la imagen</string>
    <string name="categories_add_name_empty_error">Introduzca un nombre para la categoría</string>
    <string name="items_add_name_empty_error">Introduzca un nombre para el artículo</string>
    <string name="categories_add_description_empty_error">Introduzca una descripción para la categoría</string>
    <string name="items_add_description_empty_error">Introduzca una descripción para el artículo</string>
    <string name="categories_add_picture_empty_title">Sin imagen</string>
    <string name="categories_add_picture_empty_msg">¿Deseas guardar la categoría sin imagen?</string>
    <string name="categories_add_picture_empty_save">Guardar</string>
    <string name="categories_add_picture_empty_cancel">Volver</string>
    <string name="items_add_picture_empty_title">Sin imagen</string>
    <string name="items_add_picture_empty_msg">¿Deseas guardar el producto sin imagen?</string>
    <string name="items_add_picture_empty_save">Guardar</string>
    <string name="items_add_picture_empty_cancel">Volver</string>
    <string name="categories_add_completed">Categoría creada</string>
    <string name="categories_add_failed">No se ha podido crear la categoría</string>
    <string name="categories_add_sure_exit_title">Categoría no guardada</string>
    <string name="categories_add_sure_exit_msg">¿Deseas salir sin guardar la nueva categoría?</string>
    <string name="categories_add_sure_exit_yes">Salir</string>
    <string name="categories_add_sure_exit_no">Continuar</string>
    <string name="items_add_sure_exit_msg">¿Deseas salir sin guardar el nuevo artículo?</string>
    <string name="items_add_sure_exit_yes">Salir</string>
    <string name="items_add_sure_exit_no">Continuar</string>
    <string name="category_empty_list">No hay disponible ninguna categoría. Esto puede deberse a un problema con su conexión a Internet</string>
    <string name="title_activity_items">Productos</string>
    <string name="dummy_item_name">Samsung Galaxy S9</string>
    <string name="dummy_item_description">Dispositivo móvil de última generación con doble cámara y resolución 4K. Será las delicias de los amantes de las nuevas tecnologías.</string>
    <string name="dummy_item_price">658,75</string>
    <string name="dummy_item_currency">€</string>
    <string name="items_empty_list">Lo sentimos, no hay ningún artículo en esta categoría</string>
    <string name="title_activity_items_add">Nuevo artículo</string>
    <string name="prompt_items_add_picture">URL de la imagen del producto</string>
    <string name="prompt_items_add_description">Descripción</string>
    <string name="prompt_items_add_name">Producto</string>
    <string name="items_add_completed">Artículo añadido</string>
    <string name="items_add_failed">Se ha producido un fallo al añadir el artículo</string>
    <string name="items_add_sure_exit_title">Artículo no guardado</string>
    <string name="prompt_items_add_price">Precio</string>
    <string name="items_add_price_empty_error">El artículo no tiene importe</string>
    <string name="items_add_price_error">El precio no es correcto</string>
    <string name="items_search">Buscar artículo</string>
    <string name="items_empty_list_filtered">No hay ningún artículo relacionado con esta búsqueda</string>
    <string name="item_detail_no_item">No hemos encontrado este artículo</string>
    <string name="title_activity_items_detail">Detalles</string>
    <string name="item_detail_comments">Comentarios</string>
    <string name="item_detail_comments_empty">No hay ningún comentario sobre este artículo</string>
    <string name="dummy_comment_title">Este artículo es maravilloso</string>
    <string name="dummy_comment_text">Lo tengo desde hace varias semanas y estoy muy contento con él. De momento funciona todo correctamente.</string>
    <string name="dummy_comment_user">Luismi</string>
    <string name="dummy_item_category">Dispositivos móviles</string>
    <string name="item_detail_semicolon">...</string>
    <string name="item_detail_new_comment_title_hint">Título</string>
    <string name="item_detail_new_comment_msg_hint">Mensaje</string>
    <string name="item_detail_new_comment_empty_title">Mensaje vacío</string>
    <string name="item_detail_new_comment_empty_msg">No puede publicar un mensaje vacío</string>
    <string name="item_detail_new_comment_empty_ok">Aceptar</string>
    <string name="item_detail_comment_button">Publicar tu comentario</string>
    <string name="item_detail_comment_published">Se ha publicado tu comentario</string>
    <string name="item_detail_comment_published_error">Se ha producido un error al publicar el comentario</string>
    <string name="item_shopping_cart_present_yes">Este producto está en el carrito</string>
    <string name="item_shopping_cart_present_no">Añade este producto al carrito</string>
    <string name="shopping_cart_updated">Se ha actualizado el carrito</string>
    <string name="title_activity_shopping_cart">Carrito</string>
    <string name="shopping_cart_order">Esto realizaría la compra</string>
    <string name="shopping_cart_empty_list">¡Vaya! Aún no tienes ningún artículo en el carrito</string>
    <string name="dummy_item_units">1</string>
    <string name="main_section_explore_title">Explora</string>
    <string name="main_section_explore_msg">Date un paseo por nuestro catálogo de productos y añádelos al carrito de la compra</string>
    <string name="main_section_warehouse_title">Nuestras tiendas</string>
    <string name="main_section_warehouse_msg">Consulta algunos datos de interés sobre nuestras tiendas y almacenes</string>
    <string name="main_section_cart_title">Carrito</string>
    <string name="main_section_cart_msg">¿Has terminado de comprar? Puedes revisar tu carrito de la compra y hacer el pedido</string>
    <string name="main_section_orders_title">Pedidos</string>
    <string name="main_section_orders_msg">Consulta los pedidos que has hecho hasta el momento</string>
    <string name="main_section_contact_msg">Toda la información que necesitas sobre nosotros la puedes encontrar aquí mismo</string>
    <string name="main_section_contact_title">Sobre nosotros</string>
    <string name="main_logout_title">Cerrar sesión</string>
    <string name="main_logout_msg">¿Estás seguro de que deseas finalizar la sesión con tu usuario?</string>
    <string name="main_logout_yes">Cerrar sesión</string>
    <string name="main_logout_no">Cancelar</string>
    <string name="number_picker_dialog_cancel">Cancelar</string>
    <string name="number_picker_dialog_ok">Aceptar</string>
    <string name="number_picker_dialog_title">Unidades</string>
    <string name="title_activity_main_about">Acerca de</string>
    <string name="shopping_cart_resume_total_label">Importe total</string>
    <string name="dummy_summary_total">127,56</string>
    <string name="dummy_summary_currency">€</string>
    <string name="shopping_cart_summary_clear">Vaciar carrito</string>
    <string name="shopping_cart_summary_order">Realizar compra</string>
    <string name="shopping_cart_clear_question">¿Estás seguro de que quieres eliminar todos los artículos del carrito?</string>
    <string name="shopping_cart_clear_question_yes">Eliminar</string>
    <string name="shopping_cart_clear_question_no">Cancelar</string>
    <string name="title_activity_order_map">Dirección de entrega</string>
    <string name="order_map_no_address">No se ha podido encontrar esta dirección</string>
    <string name="select_location_map">Selecciona la dirección de entrega pulsando en el mapa</string>
    <string name="location_permission_retry">Reintentar</string>
    <string name="location_permission_error">Permiso para acceder a la ubicación rechazado</string>
    <string name="sent_here">Enviar aquí</string>
</resources>
