<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/categories"
            android:icon="@drawable/section_categories"
            android:title="@string/section_title_categories" />
        <item
            android:id="@+id/shopping_cart"
            android:icon="@drawable/section_cart"
            android:title="@string/section_title_shopping_cart" />
        <item
            android:id="@+id/orders"
            android:icon="@drawable/section_orders"
            android:title="@string/section_title_orders" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/section_contact"
            android:title="@string/section_title_contact" />
    </group>

</menu>
