<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@color/colorPrimaryTransparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|bottom"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:layout_marginStart="16dp"
            android:text="@string/shopping_cart_resume_total_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/shopping_cart_summary_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_summary_total"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark" />
        <TextView
            android:paddingStart="5dp"
            android:id="@+id/shopping_cart_summary_total_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_summary_currency"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/shopping_cart_summary_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:text="@string/shopping_cart_summary_order"
            android:backgroundTint="@color/colorPrimary" />

        <TextView
            android:padding="8dp"
            android:gravity="center_horizontal"
            android:id="@+id/shopping_cart_summary_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary"
            android:text="@string/shopping_cart_summary_clear"/>
    </LinearLayout>
</LinearLayout>