<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.us.lsi.acme.market.ItemsAddActivity"
    tools:showIn="@layout/activity_items_add">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/items_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/items_add_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_items_add_name"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/items_add_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <AutoCompleteTextView
                    android:id="@+id/items_add_price_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_items_add_price"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/items_currency"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/items_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/items_add_description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_items_add_description"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="2"
                android:singleLine="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/items_add_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/items_add_picture_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_items_add_picture"
                android:inputType="textUri"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>