<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.us.lsi.acme.market.CategoriesAddActivity"
    tools:showIn="@layout/activity_categories_add">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categories_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/categories_add_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_categories_add_name"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categories_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/categories_add_description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_categories_add_description"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="2"
                android:singleLine="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categories_add_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/categories_add_picture_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_categories_add_picture"
                android:inputType="textUri"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>